syntax = "proto2";

package com.mex.bidder.api.openrtb;

option java_outer_classname = "MexOpenRtbExt";

import "openrtb.proto";

// 广告类型，解释后用于后面广告的判断
enum AdType {
    BANNER_AD = 1;

    VIDEO_AD = 2;

    NATIVE_AD = 3;
}

// 广告素材类型
enum AdMaterialType {
    TEXT_Material = 1;

    IMG_Material = 2;

    TEXT_IMG_Material = 3;

    HTML5_Material = 5;

    NATIVE_Material = 6;

    VIDEO_Material = 7;
}

message MexNbrField {
    optional string code = 1;
    optional string nbr = 2;
}


extend com.google.openrtb.BidRequest {

    // 请求是否合法
    optional bool is_ok = 200 [default = true];

    // 当前协议版本号，目前为1
    optional int32 version = 201;

    // true标记本次请求是测试请求。当为测试请求时，DSP需要返回一个带有广告的应答，
    // 该应答广告不会被展现给用户，也不会对该次广告展现计费。适用于联调测试。
    optional bool is_test = 202;

    // true标记是心跳检测请求。当为ping请求时，
    // DSP需要返回一个没有广告（即不设置BidResponse.ads字段）的应答
    optional bool is_ping = 203;

    //是否https，https=true,http=false
    optional bool need_https = 204;

    repeated AdMaterialType ad_material_type = 205;

    // 渠道名称
    optional string req_netname = 206;

}


extend com.google.openrtb.BidRequest.Imp {
    // 是否为开屏广告
    optional bool is_splash_screen = 200;

    //   instl = 7  一图一文 图片通过img传
    //   instl = 8  一图两文 图片通过img传
    //   instl = 12 一图    图片通过img_urls传
    //   instl = 13 三图一文 图片通过img_urls传
    optional int32 iflytek_instl = 201;

    // 是否支持deeplink
    optional bool is_support_deeplink = 202;
}


extend com.google.openrtb.BidRequest.Device {
    // imei 码明文
    optional string imei = 200;
    // mac 地址明文
    optional string mac = 201;
    // Android Id 明文
    optional string android_id = 202;
    // iOS  IDFA
    optional string idfa = 203;
    // window phone  用 户终端的 DUID， md5
    optional string duid = 204;
}

extend com.google.openrtb.BidResponse {
    optional AdType res_ad_type = 200;

    repeated MexNbrField debug_info = 201;

    // 渠道名称
    optional string res_netname = 202;

}

extend com.google.openrtb.BidResponse.SeatBid.Bid {
    // 曝光追踪地址, 允许使用宏
    repeated string imptrackers = 200;

    // 点击追踪地址, 允许使用宏
    repeated string clktrackers = 201;

    // 广告点击跳转地址，允许使用宏
    optional string landingpage = 202;

    // html广告代码，允许使用宏
    optional string html_snippet = 203;

    // 曝光追踪地址, 允许使用宏
    optional string app_ver = 204;

    // 响应广告类型
    optional AdType ad_type = 205;

    // 广告组id
    optional int32 adgroupid = 206;

    // 广告主id
    optional int32 adverid = 207;

    //ip
    optional string ip = 208;

    //产品id
    optional int32 productid = 209;

    // deeplink
    optional string deeplink = 210;
}





